style: whitespace + disappearing icon fix

--- a/components/SearchResults/Filter/FilterChip/FilterChip.module.scss
+++ b/components/SearchResults/Filter/FilterChip/FilterChip.module.scss
@@ -1,10 +1,16 @@
 
+.filter_item {
+    list-style-type: none;
+}
+
 .button {
     position: relative;
     background-color: var(--bg-lightgray-accenttwo);
-    display: inline-block;
+    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
+    gap: .5rem;
     padding: .5rem 1rem;
     border: none;
     border-radius: 2rem;
@@ -24,10 +30,13 @@
     letter-spacing: .05em;
     color: beige;
     line-height: 1;
+    white-space: nowrap;
 }
 
 .icon {
     margin-left: .5rem;
+    height: 1.5rem;
+    width: 1.5rem;
     svg {
         height: 1.5rem;
         width: 1.5rem;
